テスト追加

--- a/test/index.html
+++ b/test/index.html
@@ -44,6 +44,7 @@
   <script src="../src/list_metadata.js"></script>
   <script src="../src/deploy_retrieve.js"></script>
 
+  <script src="spec/core.js"></script>
   <script src="spec/data.js"></script>
   <script>
     if (navigator.userAgent.indexOf('PhantomJS') < 0) {
